feat(bautajs): fixed test, move to a class aproach, removed next, previous and loaders concept.
- Now steps is an array and you push functions
- No more this context, use ctx parameter instead

--- a/packages/multipart-request-builder/package.json
+++ b/packages/multipart-request-builder/package.json
@@ -17,6 +17,13 @@
   "author": "myaxa.mit@axa-groupsolutions.com",
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
-    "is-stream": "1.1.0"
+    "combined-stream": "^1.0.7",
+    "is-stream": "1.1.0",
+    "safe-buffer": "^5.1.2",
+    "uuid": "^3.3.2"
+  },
+  "engines": {
+    "node": ">=8",
+    "npm": ">=5"
   }
 }
