--- a/packages/bautajs/package.json
+++ b/packages/bautajs/package.json
@@ -29,18 +29,20 @@
     "npm": ">=5"
   },
   "dependencies": {
-    "ajv": "6.5.4",
-    "chalk": "2.4.1",
-    "debug-logger": "0.4.1",
-    "fast-safe-stringify": "2.0.6",
-    "glob": "7.1.3",
-    "got": "9.3.1",
-    "json-templates": "2.2.0",
-    "lodash": "4.17.11",
-    "loopback-filters": "1.0.0",
-    "merge-deep": "3.0.2",
-    "multipart-request-builder": "0.0.0",
-    "native-proxy-agent": "0.0.0",
-    "traverse": "0.6.6"
+    "ajv": "^6.5.4",
+    "chalk": "^2.4.1",
+    "debug": "^4.1.1",
+    "fast-safe-stringify": "^2.0.6",
+    "glob": "^7.1.3",
+    "got": "^9.6.0",
+    "loopback-filters": "^1.0.0",
+    "merge-deep": "^3.0.2",
+    "multipart-request-builder": "^0.0.0",
+    "native-proxy-agent": "^0.0.0",
+    "openapi-default-setter": "^2.0.3",
+    "openapi-request-validator": "^3.5.0",
+    "openapi-response-validator": "^3.6.0",
+    "openapi-schema-validator": "^3.0.2",
+    "stjs": "^0.0.5"
   }
 }
