--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
-  "packages": [
-    "packages/*"
-  ],
+  "lerna": "3.13.0",
+  "npmClient": "npm",
+  "packages": ["packages/*"],
   "version": "0.0.0"
 }
