feat: add parallel decorator

--- a/packages/bautajs/documentation.yml
+++ b/packages/bautajs/documentation.yml
@@ -723,6 +723,7 @@ toc:
       - compileDataSource
       - batch
       - template
+      - parallel
   - name: Public API
     children:
       - BautaJS
