feat(batuajs): renamee batch to flow

--- a/packages/bautajs/documentation.yml
+++ b/packages/bautajs/documentation.yml
@@ -721,7 +721,7 @@ toc:
 
       - request
       - compileDataSource
-      - batch
+      - flow
       - template
       - parallel
   - name: Public API
