--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "postinstall": "lerna bootstrap",
     "documentation": "lerna exec -- npm run documentation && git add '*/**/README.md'",
     "clean": "lerna clean --yes",
-    "release": "npm run clean && npm ci && npm run test && lerna publish --exact --conventional-commits --no-verify-access --no-verify-registry --yes",
+    "release": "npm run clean && npm i && npm run test && lerna publish --exact --conventional-commits --no-verify-access --no-verify-registry --yes",
     "test": "npm run lint && jest --verbose",
     "coverage": "npm test -- --coverage",
     "test:clean": "jest --clearCache",
