--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,8 @@
 {
   "lerna": "3.13.0",
   "npmClient": "npm",
-  "packages": ["packages/*"],
-  "version": "0.0.0"
+  "packages": [
+    "packages/*"
+  ],
+  "version": "1.0.0-alpha.0"
 }
