--- a/packages/bautajs-express/package.json
+++ b/packages/bautajs-express/package.json
@@ -31,6 +31,7 @@
     "express": "^4.16.4",
     "helmet": "^3.15.1",
     "morgan": "^1.9.1",
-    "route-order": "^0.1.0"
+    "route-order": "^0.1.0",
+    "swagger-ui-express": "^4.0.2"
   }
 }
