--- a/packages/native-proxy-agent/package.json
+++ b/packages/native-proxy-agent/package.json
@@ -1,6 +1,6 @@
 {
   "name": "native-proxy-agent",
-  "version": "1.0.0-alpha.0",
+  "version": "1.0.0",
   "description": "A native proxy agent that uses the native nodejs http.Agent and https.Agent to proxy the requests, no dependencies",
   "main": "agent.js",
   "scripts": {
