--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "nsp": "3.2.1",
     "pre-commit": "1.2.2",
     "prettier": "1.14.2",
-    "supertest": "^3.4.2"
+    "supertest": "3.4.2"
   },
   "scripts": {
     "lerna": "lerna",
