Features/issue 37 change license (#39)
* chore: change license

Closes #37

--- a/packages/bautajs-express/package.json
+++ b/packages/bautajs-express/package.json
@@ -20,7 +20,7 @@
     "express",
     "middleware"
   ],
-  "author": "mit@axa-groupsolutions.com",
+  "author": "javier.blanco@axa.com",
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
     "bautajs": "1.1.0",
