--- a/packages/bautajs/package.json
+++ b/packages/bautajs/package.json
@@ -22,7 +22,7 @@
     "bautajs",
     "middleware"
   ],
-  "author": "myaxa.mit@axa-groupsolutions.com",
+  "author": "javier.blanco@axa.com",
   "license": "SEE LICENSE IN LICENSE.txt",
   "engines": {
     "node": ">=8",
