--- a/packages/multipart-request-builder/package.json
+++ b/packages/multipart-request-builder/package.json
@@ -17,7 +17,7 @@
     "multipart",
     "request"
   ],
-  "author": "myaxa.mit@axa-groupsolutions.com",
+  "author": "javier.blanco@axa.com",
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
     "combined-stream": "1.0.7",
