fix(bautajs): issue with resolveBodyOnly (#45)
* fix(bautajs): Fix issue with resolve only body and class typo
* docs(bautajs): fix typo on documentation for datasources

Closes #44,#43

--- a/packages/bautajs/documentation.yml
+++ b/packages/bautajs/documentation.yml
@@ -760,7 +760,7 @@ toc:
 
             module.exports = fn => async (value, ctx) => {
               const step = new Step(fn);
-              return step.run({ ...ctx, dataSource: ctx.dataSource(ctx.req) }, value);
+              return step.run({ ...ctx, dataSource: ctx.dataSource(ctx) }, value);
             };
           ```
           Remember use Step to wrap the given function, it will helps on the managment of the Promise/callback/simple value usage.
