feat(bautajs): replace mergeDeep with deepMerge (#51)
* feat(bautajs): replace mergeDeep with deepMerge
 + Solve the problem where operation was included twice
* test(bautajs): add test for merge datasources

Closes #47

--- a/packages/bautajs-express/package.json
+++ b/packages/bautajs-express/package.json
@@ -5,7 +5,7 @@
   "main": "bauta-express.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "example": "node ./examples/server.js",
+    "example": "LOG_LEVEL=debug DEBUG=bautajs* node ./examples/server.js",
     "documentation": "npx documentation build \"{,!(node_modules)/**/}*.js\" --config documentation.yml --sort-order=alpha -f md -o README.md"
   },
   "repository": {
