--- a/packages/bautajs/package.json
+++ b/packages/bautajs/package.json
@@ -33,12 +33,12 @@
     "ajv": "6.9.1",
     "chalk": "2.4.1",
     "debug": "4.1.1",
+    "deepmerge": "3.2.0",
     "fast-safe-stringify": "2.0.6",
     "glob": "7.1.3",
     "got": "9.6.0",
     "json4json": "1.1.0",
     "loopback-filters": "1.0.0",
-    "merge-deep": "3.0.2",
     "multipart-request-builder": "1.1.1",
     "native-proxy-agent": "1.1.1",
     "openapi-default-setter": "2.0.4",
