--- a/packages/bautajs/package.json
+++ b/packages/bautajs/package.json
@@ -37,12 +37,12 @@
     "fast-safe-stringify": "2.0.6",
     "glob": "7.1.3",
     "got": "9.6.0",
-    "json4json": "1.1.0",
     "loopback-filters": "1.0.0",
     "multipart-request-builder": "1.1.1",
     "native-proxy-agent": "1.1.1",
     "openapi-default-setter": "2.0.4",
     "openapi-response-validator": "3.7.0",
-    "openapi-schema-validator": "3.0.3"
+    "openapi-schema-validator": "3.0.3",
+    "stjs": "0.0.5"
   }
 }
