--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "eslint-config-prettier": "3.0.1",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-prettier": "2.6.2",
-    "jest": "24.7.1",
+    "jest": "24.8.0",
     "jest-extended": "0.11.1",
     "jest-junit": "6.3.0",
     "lerna": "3.13.1",
@@ -59,6 +59,10 @@
     ]
   },
   "jest": {
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/?(*.)+(spec|test|e2e).js?(x)"
+    ],
     "projects": [
       "<rootDir>/packages/*"
     ]
