--- a/packages/bautajs-express/package.json
+++ b/packages/bautajs-express/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bautajs/express",
-  "version": "1.2.2",
+  "version": "2.0.0-alpha.0",
   "description": "A bautaJS express plugin. Allows auto exposing the bautaJS services.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -29,7 +29,7 @@
   "author": "javier.blanco@axa.com",
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "1.2.2",
+    "@bautajs/core": "2.0.0-alpha.0",
     "body-parser": "1.18.3",
     "chalk": "2.4.2",
     "compression": "1.7.3",
