--- a/packages/bautajs/package.json
+++ b/packages/bautajs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bautajs/core",
-  "version": "1.2.2",
+  "version": "2.0.0-alpha.0",
   "description": "A simple library to make middlewares",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -35,7 +35,6 @@
     "npm": ">=5"
   },
   "dependencies": {
-    "openapi-request-validator": "3.8.1",
     "ajv": "6.9.1",
     "chalk": "2.4.1",
     "debug": "4.1.1",
@@ -44,9 +43,10 @@
     "glob": "7.1.3",
     "got": "9.6.0",
     "is-plain-object": "3.0.0",
-    "multipart-request-builder": "1.2.2",
-    "native-proxy-agent": "1.2.2",
+    "multipart-request-builder": "2.0.0-alpha.0",
+    "native-proxy-agent": "2.0.0-alpha.0",
     "openapi-default-setter": "2.0.4",
+    "openapi-request-validator": "3.8.1",
     "openapi-response-validator": "3.7.0",
     "openapi-schema-validator": "3.0.3",
     "openapi-types": "1.3.4",
