--- a/packages/native-proxy-agent/.npmignore
+++ b/packages/native-proxy-agent/.npmignore
@@ -1,6 +1,7 @@
-*
-!src/**/*
-!dist/**/*
-dist/**/*.test.*
-!package.json
-!README.md
+docs/
+src/
+node_modules/
+documentation.md
+jest.config.js
+tsconfig.json
+examples/
