chore: fix files on packages

--- a/packages/bautajs-express/package.json
+++ b/packages/bautajs-express/package.json
@@ -5,9 +5,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
-    "./dist/**/*.js",
-    "./dist/**/*.d.ts",
-    "./dist/index.d.ts"
+    "dist/**/*"
   ],
   "scripts": {
     "example": "LOG_LEVEL=debug DEBUG=bautajs* node ./examples/server.js",
