--- a/packages/bautajs-decorators/package.json
+++ b/packages/bautajs-decorators/package.json
@@ -5,9 +5,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
-    "./dist/**/*.js",
-    "./dist/**/*.d.ts",
-    "./dist/index.d.ts"
+    "dist/**/*"
   ],
   "scripts": {
     "documentation": "typedoc --name @bautajs/decorators ./src",
