--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
     "@types/node": "11.13.4",
     "@types/supertest": "2.0.7",
     "@types/swagger-ui-express": "3.0.0",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "@typescript-eslint/eslint-plugin": "1.9.0",
     "@typescript-eslint/parser": "1.9.0",
     "clean": "4.0.2",
     "eslint": "5.16.0",
     "eslint-config-airbnb-typescript": "4.0.0",
     "eslint-config-prettier": "4.3.0",
-    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-import": "2.17.2",
     "eslint-plugin-jest": "22.5.1",
     "eslint-plugin-prettier": "3.1.0",
     "got": "9.4.0",
@@ -49,9 +49,9 @@
     "jest-config": "24.8.0",
     "jest-extended": "0.11.1",
     "jest-junit": "6.3.0",
-    "lerna": "3.13.1",
+    "lerna": "3.14.1",
     "lint-staged": "8.1.0",
-    "nock": "9.6.1",
+    "nock": "11.0.0-beta.17",
     "nsp": "3.2.1",
     "pre-commit": "1.2.2",
     "prettier": "1.14.2",
@@ -83,6 +83,7 @@
     "compile:clean": "tsc --build tsconfig.build.json --clean",
     "watch": "tsc --build tsconfig.build.json --watch"
   },
+  "engines" : { "node" : ">=8" },
   "lint-staged": {
     "*.ts": [
       "prettier --write",
