fix(bautajs, bautajs/express): No more crash on create documentation. Get ride of the not used schema definitions.
- Better validation stack trace error

Closes #68 #67

--- a/packages/bautajs-cache-decorator/tsconfig.json
+++ b/packages/bautajs-cache-decorator/tsconfig.json
@@ -17,6 +17,6 @@
     "includeDeclarations": true,
     "excludeNotExported": true,
     "excludeExternals": true,
-    "toc": true
+    "exclude":"**/*.test.ts"
   }
 }
