--- a/packages/bautajs-filters-decorator/tsconfig.json
+++ b/packages/bautajs-filters-decorator/tsconfig.json
@@ -18,6 +18,6 @@
     "includeDeclarations": true,
     "excludeNotExported": true,
     "excludeExternals": true,
-    "toc": true
+    "exclude":"**/*.test.ts"
   }
 }
