--- a/packages/bautajs/tsconfig.json
+++ b/packages/bautajs/tsconfig.json
@@ -5,7 +5,7 @@
     "outDir": "./dist",
     "target": "es6"
   },
-  "include": ["src/**/*", "src/**/*.json"],
+  "include": ["src/**/*.ts", "src/validators/*.json"],
   "exclude": ["**/__tests__", "**/__mocks__"],
   "typedocOptions": {
     "mode": "file",
@@ -17,6 +17,6 @@
     "includeDeclarations": true,
     "excludeNotExported": true,
     "excludeExternals": true,
-    "toc": true
+    "exclude":"**/*.test.ts"
   }
 }
