--- a/packages/multipart-request-builder/tsconfig.json
+++ b/packages/multipart-request-builder/tsconfig.json
@@ -17,6 +17,6 @@
     "includeDeclarations": true,
     "excludeNotExported": true,
     "excludeExternals": true,
-    "toc": true
+    "exclude":"**/*.test.ts"
   }
 }
