--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/morgan": "1.7.35",
     "@types/nock": "10.0.2",
     "@types/node": "11.13.4",
+    "@types/object-path": "0.11.0",
     "@types/supertest": "2.0.7",
     "@types/swagger-ui-express": "3.0.0",
     "@typescript-eslint/eslint-plugin": "1.9.0",
