--- a/packages/bautajs-express/package.json
+++ b/packages/bautajs-express/package.json
@@ -25,7 +25,7 @@
   "author": "javier.blanco@axa.com",
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "2.0.0-alpha.9",
+    "@bautajs/core": "^2.0.0-alpha.9",
     "body-parser": "1.19.0",
     "chalk": "2.4.2",
     "compression": "1.7.4",
@@ -36,6 +36,6 @@
     "openapi-types": "1.3.4",
     "route-order": "0.1.0",
     "swagger-ui-express": "4.0.7",
-    "@bautajs/environment": "^2.0.0-alpha.8"
+    "@bautajs/environment": "^2.0.0-alpha.9"
   }
 }
