chore: do not pulblish the example package

--- a/packages/bautajs-example/package.json
+++ b/packages/bautajs-example/package.json
@@ -10,6 +10,7 @@
     "type": "git",
     "url": "https://github.axa.com/Digital/bauta-nodejs"
   },
+  "private": true,
   "keywords": [
     "bautajs",
     "express",
