fix(bautajs): maintain the agent between request - keepAlive is set true by default - parallel now not throw error when promise.all fails
Closes #79 #78

--- a/packages/bautajs/package.json
+++ b/packages/bautajs/package.json
@@ -39,7 +39,8 @@
     "got": "9.6.0",
     "loopback-filters": "1.0.0",
     "multipart-request-builder": "2.0.0",
-    "native-proxy-agent": "2.0.0",
+    "native-proxy-agent": "2.1.0",
+    "node-object-hash": "^1.4.2",
     "openapi-default-setter": "2.0.4",
     "openapi-response-validator": "3.7.0",
     "openapi-schema-validator": "3.0.3",
