--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "jest-junit": "6.3.0",
     "lerna": "3.13.1",
     "lint-staged": "8.1.0",
-    "nock": "9.6.1",
+    "nock": "11.0.0-beta.23",
     "pre-commit": "1.2.2",
     "prettier": "1.14.2",
     "supertest": "3.4.2"
