chore: fix test not passing

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "eslint-plugin-jest": "22.5.1",
     "eslint-plugin-prettier": "3.1.0",
     "got": "9.4.0",
-    "jest": "24.7.1",
+    "jest": "24.8.0",
     "jest-config": "24.8.0",
     "jest-extended": "0.11.1",
     "jest-junit": "6.3.0",
@@ -70,7 +70,7 @@
     "postinstall": "lerna bootstrap && npm run compile",
     "clean": "lerna clean --yes && git clean -dfqX -- ./node_modules **/{dist,node_modules}/ ./packages/*/tsconfig*tsbuildinfo ./packages/*/package-lock.json ./coverage",
     "release": "npm run clean && npm i && npm run test && lerna publish --exact --conventional-commits --no-verify-access --no-verify-registry --yes",
-    "test": "npm run lint && jest --verbose",
+    "test": "npm run lint && jest --verbose --forceExit --detectOpenHandles",
     "coverage": "npm test -- --coverage",
     "test:clean": "jest --clearCache",
     "test:watch": "jest --verbose --watchAll",
