--- a/packages/bautajs-express/package.json
+++ b/packages/bautajs-express/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bautajs/express",
-  "version": "2.0.0-alpha.9",
+  "version": "2.0.0-alpha.10",
   "description": "A bautaJS express plugin. Allows auto exposing the bautaJS services.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -25,7 +25,8 @@
   "author": "javier.blanco@axa.com",
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "^2.0.0-alpha.9",
+    "@bautajs/core": "2.0.0-alpha.10",
+    "@bautajs/environment": "2.0.0-alpha.10",
     "body-parser": "1.19.0",
     "chalk": "2.4.2",
     "compression": "1.7.4",
@@ -35,7 +36,6 @@
     "morgan": "1.9.1",
     "openapi-types": "1.3.4",
     "route-order": "0.1.0",
-    "swagger-ui-express": "4.0.7",
-    "@bautajs/environment": "^2.0.0-alpha.9"
+    "swagger-ui-express": "4.0.7"
   }
 }
