--- a/packages/bautajs/package.json
+++ b/packages/bautajs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bautajs/core",
-  "version": "2.0.0-alpha.9",
+  "version": "2.0.0-alpha.10",
   "description": "A simple library to make middlewares",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -32,7 +32,7 @@
     "npm": ">=5"
   },
   "dependencies": {
-    "@bautajs/environment": "^2.0.0-alpha.8",
+    "@bautajs/environment": "2.0.0-alpha.10",
     "ajv": "6.10.0",
     "debug": "4.1.1",
     "deepmerge": "3.3.0",
