fix(bautajs): take components parameter in account on filter schemas
Related #80

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,9 +9,7 @@
     "node": true
   },
   "rules": {
-    "import/no-extraneous-dependencies": {
-      "moduleDirectories": ["./"]
-    },
+    "import/no-extraneous-dependencies": "off",
     "prefer-spread": 0,
     "comma-dangle": ["error", "never"],
     "global-require": 0,
