--- a/packages/bautajs/package.json
+++ b/packages/bautajs/package.json
@@ -35,6 +35,7 @@
     "debug": "4.1.1",
     "deepmerge": "3.2.0",
     "fast-safe-stringify": "2.0.6",
+    "form-data": "^2.5.0",
     "glob": "7.1.3",
     "got": "9.6.0",
     "loopback-filters": "1.0.0",
