--- a/packages/bautajs-datasource-rest/package.json
+++ b/packages/bautajs-datasource-rest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bautajs/datasource-rest",
-  "version": "2.0.0-alpha.10",
+  "version": "2.0.0",
   "description": "A bautaJS cache decorator",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -25,8 +25,8 @@
   "author": "javier.blanco@axa.com",
   "license": "SEE LICENSE IN LICENSE.txt",
   "dependencies": {
-    "@bautajs/core": "2.0.0-alpha.10",
-    "@bautajs/environment": "2.0.0-alpha.10",
+    "@bautajs/core": "2.0.0",
+    "@bautajs/environment": "2.0.0",
     "callsites": "3.1.0",
     "form-data": "2.5.0",
     "got": "9.6.0",
