--- a/packages/bautajs-environment/package.json
+++ b/packages/bautajs-environment/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bautajs/environment",
-  "version": "2.0.0-alpha.10",
+  "version": "2.0.0",
   "description": "A bautaJS environment typings",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
