--- a/packages/bautajs-express/package.json
+++ b/packages/bautajs-express/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bautajs/express",
-  "version": "2.0.0-alpha.10",
+  "version": "2.0.0",
   "description": "A bautaJS express plugin. Allows auto exposing the bautaJS operations.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -25,11 +25,11 @@
   "author": "javier.blanco@axa.com",
   "license": "SEE LICENSE IN LICENSE.txt",
   "peerDependencies": {
-    "@bautajs/core":"2.0.0-alpha.10"
+    "@bautajs/core": "2.0.0-alpha.10"
   },
   "dependencies": {
-    "@bautajs/core":"2.0.0-alpha.10",
-    "@bautajs/environment": "2.0.0-alpha.10",
+    "@bautajs/core": "2.0.0",
+    "@bautajs/environment": "2.0.0",
     "body-parser": "1.19.0",
     "chalk": "2.4.2",
     "compression": "1.7.4",
