chore: Remove environment package (#87)
* chore: remove environment package.

There is no need to have that package anymore, types where moved inside each package that needs it.

It was an internal module, so it's not breaking.

- bautajs folder should be renamed to bautajs-core

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -6,8 +6,7 @@
   "files": [],
   "exclude": ["__tests__"],
   "references": [
-    { "path": "./packages/bautajs-environment" },
-    { "path": "./packages/bautajs" },
+    { "path": "./packages/bautajs-core" },
     { "path": "./packages/bautajs-datasource-rest" },
     { "path": "./packages/bautajs-decorator-cache" },
     { "path": "./packages/bautajs-decorator-template" },
