--- a/packages/bautajs-datasource-rest/package.json
+++ b/packages/bautajs-datasource-rest/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@bautajs/core": "2.0.0",
     "callsites": "3.1.0",
+    "deepmerge": "4.0.0",
     "form-data": "2.5.0",
     "got": "9.6.0",
     "is-plain-object": "3.0.0",
