feat(@bautajs/core):  pipelines are now runnable. (#89)
* fix: remove @bautajs/environment, we don't need to use it any more

* chore: remove environment package.

There is no need to have that package anymore, types where moved inside each package that needs it.

It was an internal module, so it's not breaking.

* feat(@bautajs/core):  pielines are now runnable.

- Pipeline decorator creates a new pipeline runnable
- Add match operator to conditionally run pipelines
- Fix, pipeline error are not lost on pushPipeline or merge pipelines.
- Internal core classes are not exported anymore

Closes #86

* feat(@bautajs/core): pipeline now returns stepfn

* feat(@bautajs/core): include pipe concept on pipeline and deprecate pushPipeline and push

* feat: rename StepFN to OperatorFunction, deprecate StepFN.

Closes #93

--- a/packages/bautajs-core/tsconfig.json
+++ b/packages/bautajs-core/tsconfig.json
@@ -2,8 +2,7 @@
   "extends": "../../tsconfig.base",
   "compilerOptions": {
     "rootDir": "./src",
-    "outDir": "./dist",
-    "target": "es6"
+    "outDir": "./dist"
   },
   "include": ["src/**/*.ts", "src/validators/*.json"],
   "exclude": ["**/__tests__", "**/__mocks__", "dist"]
