--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
   },
   "plugins": ["import", "jest"],
   "rules": {
+    "no-useless-constructor": "off",
     "import/no-extraneous-dependencies": "off",
     "prefer-spread": 0,
     "comma-dangle": ["error", "never"],
