--- a/packages/bautajs-decorator-cache/tsconfig.json
+++ b/packages/bautajs-decorator-cache/tsconfig.json
@@ -2,8 +2,7 @@
   "extends": "../../tsconfig.base",
   "compilerOptions": {
     "rootDir": "./src",
-    "outDir": "./dist",
-    "target": "es6"
+    "outDir": "./dist"
   },
   "include": ["src/**/*", "src/**/*.json"],
   "exclude": ["**/__tests__", "**/__mocks__"]
