--- a/packages/bautajs-core/package.json
+++ b/packages/bautajs-core/package.json
@@ -38,7 +38,7 @@
     "glob": "7.1.4",
     "hyperid": "2.0.2",
     "openapi-default-setter": "2.0.4",
-    "openapi-request-validator": "3.8.3",
+    "@javi11/openapi-request-validator": "3.8.4",
     "openapi-response-validator": "3.8.1",
     "openapi-schema-validator": "3.0.3",
     "openapi-types": "1.3.5",
