fix(@bautajs/core): do not validate response on set res.headerSent or res.finished
Closes #101

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,7 @@
   "rules": {
     "no-useless-constructor": "off",
     "import/no-extraneous-dependencies": "off",
-    "prefer-spread": 0,
+    "import/prefer-default-export": "off",
     "comma-dangle": ["error", "never"],
     "prettier/prettier": ["error"]
   }
