--- a/package.json
+++ b/package.json
@@ -18,41 +18,41 @@
   },
   "homepage": "https://github.axa.com/Digital/bauta-nodejs#readme",
   "devDependencies": {
-    "@types/body-parser": "1.17.0",
-    "@types/compression": "0.0.36",
-    "@types/cors": "2.8.5",
-    "@types/debug": "4.1.4",
+    "@types/body-parser": "1.17.1",
+    "@types/compression": "1.0.1",
+    "@types/cors": "2.8.6",
+    "@types/debug": "4.1.5",
     "@types/deepmerge": "2.2.0",
-    "@types/express": "4.17.0",
+    "@types/express": "4.17.1",
     "@types/form-data": "2.5.0",
     "@types/glob": "7.1.1",
-    "@types/got": "9.6.1",
-    "@types/helmet": "0.0.43",
-    "@types/jest": "24.0.15",
+    "@types/got": "9.6.7",
+    "@types/helmet": "0.0.44",
+    "@types/jest": "24.0.18",
     "@types/memoizee": "0.4.2",
-    "@types/morgan": "1.7.35",
+    "@types/morgan": "1.7.37",
     "@types/nock": "10.0.3",
-    "@types/node": "12.6.6",
+    "@types/node": "12.7.3",
     "@types/object-path": "0.11.0",
     "@types/supertest": "2.0.8",
     "@types/swagger-ui-express": "3.0.1",
-    "@typescript-eslint/eslint-plugin": "1.12.0",
-    "@typescript-eslint/parser": "1.12.0",
-    "eslint": "6.0.1",
+    "@typescript-eslint/eslint-plugin": "2.0.0",
+    "@typescript-eslint/parser": "2.0.0",
+    "eslint": "6.2.2",
     "eslint-config-airbnb-typescript": "4.0.1",
-    "eslint-config-prettier": "6.0.0",
-    "eslint-plugin-import": "2.18.0",
-    "eslint-plugin-jest": "22.9.0",
+    "eslint-config-prettier": "6.1.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jest": "22.16.0",
     "eslint-plugin-prettier": "3.1.0",
     "fast-safe-stringify": "2.0.6",
     "got": "9.6.0",
-    "jest": "24.8.0",
-    "jest-config": "24.8.0",
+    "jest": "24.9.0",
+    "jest-config": "24.9.0",
     "jest-extended": "0.11.2",
-    "jest-junit": "6.4.0",
-    "lerna": "3.15.0",
-    "lint-staged": "9.2.0",
-    "nock": "11.0.0-beta.17",
+    "jest-junit": "8.0.0",
+    "lerna": "3.16.0",
+    "lint-staged": "9.2.5",
+    "nock": "11.0.0",
     "nsp": "3.2.1",
     "pre-commit": "1.2.2",
     "prettier": "1.18.2",
